--- a/views/index.pug
+++ b/views/index.pug
@@ -6,3 +6,4 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title myapp
     body
+        script(type="text/javascript" src="/app.js")
